--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -324,4 +324,18 @@
         <item>@string/volume_steps_7</item>
         <item>@string/volume_steps_5</item>
     </string-array>
+
+    <!-- PowerMenu entries -->
+    <string-array name="power_menu_actions_array" translatable="false">
+        <item>power</item>
+        <item>reboot</item>
+        <item>screenshot</item>
+        <item>airplane</item>
+        <item>users</item>
+        <item>settings</item>
+        <item>lockdown</item>
+        <item>assist</item>
+        <item>voiceassist</item>
+        <item>silent</item>
+    </string-array>
 </resources>
