--- a/res/xml/aosip_powermenu.xml
+++ b/res/xml/aosip_powermenu.xml
@@ -1,24 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--  Copyright (C) 2015 Android Open Source Illusion Project
+<!-- Copyright (C) 2015 The Pure Nexus Project
+     Copyright (C) 2014-2015 The CyanogenMod Project
 
-  This program is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
 
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
+          http://www.apache.org/licenses/LICENSE-2.0
 
-  You should have received a copy of the GNU General Public License
-  along with this program.  If not, see <http://www.gnu.org/licenses/>.
- -->
-
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:title="@string/powermenu_category" >
+    android:title="@string/power_menu_title">
+
+    <SwitchPreference
+        android:key="reboot"
+        android:title="@string/power_menu_reboot_title"
+        android:defaultValue="true" />
+
+    <SwitchPreference
+        android:key="screenshot"
+        android:title="@string/power_menu_screenshot_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="airplane"
+        android:title="@string/power_menu_airplane_title"
+        android:defaultValue="true" />
+
+    <SwitchPreference
+        android:key="users"
+        android:title="@string/power_menu_users_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="settings"
+        android:title="@string/power_menu_settings_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="lockdown"
+        android:title="@string/power_menu_lockdown_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="assist"
+        android:title="@string/power_menu_search_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="voiceassist"
+        android:title="@string/power_menu_voice_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="bugreport"
+        android:title="@string/power_menu_bug_report_title"
+        android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="silent"
+        android:title="@string/power_menu_sound_title"
+        android:defaultValue="true" />
 
 </PreferenceScreen>
+
 
