--- a/res/values/custom_arrays.xml
+++ b/res/values/custom_arrays.xml
@@ -532,4 +532,48 @@
         <item>6</item>
         <item>7</item>
     </string-array>
+
+    <string-array name="number_of_notifications_entries">
+        <item>@string/always_title</item>
+        <item>@string/number_of_notifications_two_title</item>
+        <item>@string/number_of_notifications_three_title</item>
+        <item>@string/number_of_notifications_four_title</item>
+        <item>@string/number_of_notifications_five_title</item>
+        <item>@string/number_of_notifications_six_title</item>
+    </string-array>
+
+    <string-array name="number_of_notifications_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
+    <string-array name="network_traffic_activity_entries" >
+        <item>@string/network_traffic_activity_down</item>
+        <item>@string/network_traffic_activity_up</item>
+        <item>@string/network_traffic_activity_down_up</item>
+        <item>@string/disabled_title</item>
+    </string-array>
+
+    <string-array name="network_traffic_activity_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="network_traffic_type_entries" >
+        <item>@string/text_title</item>
+        <item>@string/icon_title</item>
+        <item>@string/network_traffic_type_text_icon</item>
+    </string-array>
+
+    <string-array name="network_traffic_type_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
