--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -46,6 +46,16 @@
     <string name="choose_app">Choose app</string>
     <string name="allow_lights_title">Lights in do not disturb mode</string>
     <string name="notification_light_screen_on">Lights with screen on</string>
+    <string name="dlg_dslv_reset_message">Reset all entries to default?</string>
+    <string name="dlg_reset_values_message">Reset values to\nAndroid- or AOSiP default?</string>
+    <string name="dlg_reset_colors_message">Reset colors to\nAndroid- or AOSiP default?</string>
+    <string name="dlg_reset_android">Android</string>
+    <string name="dlg_reset_aosip">AOSiP</string>
+    <string name="normal_title">Normal</string>
+    <string name="hidden_title">Hidden</string>
+    <string name="position_title">Position</string>
+    <string name="position_right_title">Right</string>
+    <string name="position_centered_title">Centered</string>
 
     <!-- AOSiP custom settings main -->
     <string name="header_category_personalization">UI settings</string>
@@ -58,6 +68,8 @@
     <string name="clock_category">Clock</string>
     <string name="battery_category">Battery</string>
     <string name="icon_category">Icons</string>
+    <string name="carrier_category">Carrier label</string>
+    <string name="traffic_category">Network traffic</string>
     <string name="extra_category">Extras</string>
     <!-- Contexual statusbar header-->
     <string name="contexual_header_title">Contexual header</string>
@@ -75,6 +87,47 @@
     <string name="battery_bar_color">Battery bar color</string>
     <string name="status_bar_icon_blacklist_title">Visible</string>
     <string name="status_bar_icon_blacklist_summary">Adjust visible icons</string>
+    <!-- Carrier label settings -->
+    <string name="carrier_label_cat_notification_icons_title">Notification icons</string>
+    <string name="carrier_label_show_title">Show</string>
+    <string name="carrier_label_show_summary">Enable to show the (custom) carrier label on the status bar</string>
+    <string name="carrier_label_show_on_lock_screen_title">Show on lock screen</string>
+    <string name="carrier_label_show_on_lock_screen_summary">Enable to show the (custom) carrier label on the status bar of the lock screen</string>
+    <string name="carrier_label_use_custom_title">Custom carrier label</string>
+    <string name="carrier_label_use_custom_summary">Enable to use a custom carrier label</string>
+    <string name="carrier_label_custom_label_title">Custom label</string>
+    <string name="carrier_label_custom_label_dlg_message">Enter a new custom label to display instead of the real carrier name. An empty field will revert the name to \'AOSiP\'</string>
+    <string name="carrier_label_hide_label_title">Hide</string>
+    <string name="carrier_label_hide_label_summary">Enable to choose a number of visible notification icons to hide the (custom) carrier label on the status bar</string>
+    <string name="carrier_label_number_of_notification_icons_title">Number of notification icons</string>
+    <string name="status_bar_carrier_label_settings_title">Carrier label</string>
+    <string name="status_bar_carrier_label_settings_summary">Customize the carrier label</string>
+    <string name="text_title">Text</string>
+    <string name="always_title">Always</string>
+    <string name="number_of_notifications_title">Number of notifications</string>
+    <string name="number_of_notifications_two_title">2</string>
+    <string name="number_of_notifications_three_title">3</string>
+    <string name="number_of_notifications_four_title">4</string>
+    <string name="number_of_notifications_five_title">5</string>
+    <string name="number_of_notifications_six_title">6</string>
+    <!-- Status bar Network traffic settings -->
+    <string name="network_traffic_activity_title">Activity</string>
+    <string name="network_traffic_activity_down">Download</string>
+    <string name="network_traffic_activity_up">Upload</string>
+    <string name="network_traffic_activity_down_up">Download &amp; Upload</string>
+    <string name="network_traffic_type_title">Type</string>
+    <string name="network_traffic_type_text_icon">Text &amp; icon</string>
+    <string name="network_traffic_bit_byte_title">Show bit values</string>
+    <string name="network_traffic_bit_byte_summary">Enable to show the values in bit instead of byte</string>
+    <string name="network_traffic_hide_traffic_title">Hide the indicator</string>
+    <string name="network_traffic_hide_traffic_summary">Enable to hide the indicator if there is no traffic</string>
+    <string name="options_title">Options</string>
+    <string name="colors_title">Colors</string>
+    <string name="disabled_title">Disabled</string>
+    <string name="icon_title">Icon</string>
+    <string name="text_title">Text</string>
+    <string name="status_bar_network_traffic_settings_title">Network traffic</string>
+    <string name="status_bar_network_traffic_settings_summary">Customize the network traffic</string>
 
     <!--Owlsnest navigation-->
     <string name="navigation_title">Navigation bar options</string>
