--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -138,6 +138,10 @@
     <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
     <string name="recents_searchbar_title">Search bar</string>
     <string name="recents_searchbar_summary">Show Google search bar in the recents screen</string>
+    <string name="recents_show_membar_title">Memory bar</string>
+    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
+
+ </resources>
 
     <!--Owlsnest lockscreen-->
     <string name="lockscreen_title">Lockscreen</string>
